# fraud-transactions-detection

./: .env.sample  .gitignore  Dockerfile  Makefile  Qonto Skill Test - Vadim.ipynb  README.md  docker-compose.yml  env.yaml  kernel.py  pipeline.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
api/: app.py  config.py  types.py
api/aggregates/: transaction.py
api/db/: csv.py  predictions.py  protocols.py  storage.py
api/predictor/: fraud.py
notebooks/: 01_init.ipynb  02_eda_v1.ipynb  02_eda_v2.ipynb  03_01_split_data.ipynb  03_02_feature_eng.ipynb  03_02_feature_eng_v1.ipynb  03_02_feature_eng_v2.ipynb  04_01_model_logreg.ipynb  04_03_model_xgboost.ipynb  utils.py
src/fraudlib/: pyproject.toml  utils.py
tests/: conftest.py  test_app.py
tests/db/: test_csv.py  test_predictions.py  test_storage.py
tests/predictor/: test_fraud_predictor.py
