[project]
name = "fraud_transactions_tech_assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dtreeviz>=2.2.2",
    "imblearn>=0.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "pip>=25.2",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "xgboost>=3.0.5",
]

[dependency-groups]
api = [
    "fastapi>=0.119.1",
    "numpy==2.3.3",
    "pandas==2.3.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "scikit-learn==1.7.2",
    "uvicorn>=0.38.0",
    "xgboost>=3.0.5",
]
dev = [
    "black>=25.9.0",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.1",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
