[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraudlib"
version = "0.1.0"
description = "Utility library for fraud detection and ML experiments"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "xgboost>=3.0.0",
    "pyyaml>=6.0",
]

[tool.setuptools]
packages = ["fraudlib"]
package-dir = { "fraudlib" = "." }